--- a/hello-world/.gitignore
+++ b/hello-world/.gitignore
@@ -1,6 +1,3 @@
-# Created by https://www.toptal.com/developers/gitignore/api/intellij,gradle,intellij+iml,intellij+all,java,kotlin
-# Edit at https://www.toptal.com/developers/gitignore?templates=intellij,gradle,intellij+iml,intellij+all,java,kotlin
-
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -294,5 +291,7 @@ gradle-app.setting
 ### Gradle Patch ###
 # Java heap dump
 *.hprof
+
+.DS_Store
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,gradle,intellij+iml,intellij+all,java,kotlin
